actualizando el proyecto de Elvis Pachacama

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="estilos.css">
-    <title>Document</title>
+    <title>Proyecto GIT</title>
 
 </head>
 
@@ -16,7 +16,7 @@
     <p>Este es un seguundo parrafo</p>
 
     <p>Este parrafo es agregadao por el segundo usuario</p>
-
+    <p>Esta linea fue creada y actualizada para el proyecto de Elvis Pachacama</p>
 </body>
 
 </html>
