Cambios en mi index.html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 
     <p>Este parrafo es agregadao por el segundo usuario</p>
 
+    <h1>Hola desde Git</h1>
+    <p>Esta linea fue creada para el proyecto del profe</p>
+
 </body>
 
 </html>
