actualizando el proyecto del ing

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p> Este es un parrafo</p>
     <p>Este es un seguundo parrafo</p>
 
-    <p>Este parrafo es agregadao por el segundo usuario</p>
+    <p>actualizando el proyecto del ing elvisPachacama</p>
 
 </body>
 
